<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color"
    android:orientation="vertical">

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_marginBottom="20dp"
        android:background="@color/black_for_color" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/shape_frame_bg_gray">

        <EditText
            android:id="@+id/et_user_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@null"
            android:hint="@string/login_user_name_hint"
            android:padding="10dp"
            android:textSize="15sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_below="@id/et_user_name"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/black_for_color" />

        <EditText
            android:id="@+id/et_psw"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_user_name"
            android:layout_margin="10dp"
            android:background="@null"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/iv_clear_user"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_alignBottom="@id/et_user_name"
            android:layout_alignRight="@id/et_user_name"
            android:layout_marginBottom="10dp"
            app:srcCompat="@drawable/delete_small_vector" />

        <ImageView
            android:id="@+id/iv_show_password"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignBottom="@id/et_psw"
            android:layout_alignRight="@id/et_psw"
            android:layout_marginBottom="10dp"
            app:srcCompat="@drawable/eye_open" />
    </RelativeLayout>

    <cn.xhuww.mvvm.widget.RippleTextView
        android:id="@+id/btn_login"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/corner_rectangle_bg_red"
        android:gravity="center"
        android:text="@string/login_four_spacing"
        android:textColor="@color/white_color"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tv_text_forget_psw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/login_forget_password"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_text_fast_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:text="@string/login_fast_register"
            android:textSize="15sp" />

        <cn.xhuww.mvvm.widget.DivisionLayoutView
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_above="@+id/ll_login_ways"
            android:gravity="center"
            android:orientation="horizontal"
            app:divisionText="@string/login_other_ways" />


        <LinearLayout
            android:id="@+id/ll_login_ways"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/tv_sina_login"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/weibo_logo_vector" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/login_sina_microblog"
                    android:textColor="@color/black_two_color" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tv_qq_login"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="visible">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/qq_logo_vector" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/login_qq"
                    android:textColor="@color/black_two_color" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tv_wechat_login"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/weixin_logo_vector" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/login_wechat"
                    android:textColor="@color/black_two_color" />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
