<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/personal_swipe"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/top_relative"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="@color/red_color">

            <ImageView
                android:id="@+id/personal_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:scaleType="center"
                app:layout_constraintEnd_toStartOf="@+id/personal_setting"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/msg_white_vector" />

            <ImageView
                android:id="@+id/personal_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:layout_toLeftOf="@id/personal_msg"
                android:scaleType="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/setting_vector" />

            <ImageView
                android:id="@+id/personal_head"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerVertical="true"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/head_default_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/personal_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@id/personal_head"
                android:text="@string/login_prompt"
                android:textColor="@color/white_color"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/personal_head"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

        <View
            style="@style/HorizontalLine"
            android:layout_marginTop="150dp" />

        <cn.xhuww.mvvm.widget.GroupTextView
            android:id="@+id/personal_take_cash"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:paddingLeft="20dp"
            app:drawablePaddingLeft="5dp"
            app:leftDrawable="@drawable/attention_vector"
            app:rightDrawable="@drawable/arrow_right_icon"
            app:textLeftColor="@color/black_two_color"
            app:textLeftString="@string/my_focus" />

        <View style="@style/HorizontalLine" />

        <cn.xhuww.mvvm.widget.GroupTextView
            android:id="@+id/personal_my_track"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:paddingLeft="20dp"
            app:drawablePaddingLeft="5dp"
            app:leftDrawable="@drawable/vector_drawable_my_history"
            app:rightDrawable="@drawable/arrow_right_icon"
            app:textLeftColor="@color/black_two_color"
            app:textLeftString="@string/my_history" />

        <View style="@style/HorizontalLine" />

        <cn.xhuww.mvvm.widget.GroupTextView
            android:id="@+id/personal_my_share"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:paddingLeft="20dp"
            app:drawablePaddingLeft="5dp"
            app:leftDrawable="@drawable/share_out_vector"
            app:rightDrawable="@drawable/arrow_right_icon"
            app:textLeftColor="@color/black_two_color"
            app:textLeftString="@string/share_to_friend" />

        <View style="@style/HorizontalLine" />

        <cn.xhuww.mvvm.widget.GroupTextView
            android:id="@+id/personal_my_feed"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:paddingLeft="20dp"
            app:drawablePaddingLeft="5dp"
            app:leftDrawable="@drawable/feed_back_vector"
            app:rightDrawable="@drawable/arrow_right_icon"
            app:textLeftColor="@color/black_two_color"
            app:textLeftString="@string/back_feed" />

        <View style="@style/HorizontalLine" />
    </LinearLayout>
</ScrollView>
